plugins {
    id 'java'
    id 'org.springframework.boot' version '3.2.5'
    id 'io.spring.dependency-management' version '1.1.4'
}

group = 'com.robertnator'
version = '1.0.2-SNAPSHOT'

java {
    sourceCompatibility = '21'
}

repositories {
    mavenCentral()
}

dependencies {
    implementation 'org.springframework.boot:spring-boot-starter-actuator'
    implementation 'org.springframework.boot:spring-boot-starter-web'
    implementation 'org.springframework.boot:spring-boot-starter-validation'
    implementation group: 'org.json', name: 'json', version: '20240303'
    implementation 'com.fasterxml.jackson.core:jackson-databind:2.17.1'
    implementation 'org.apache.commons:commons-lang3:3.14.0'
    implementation 'com.kohlschutter.junixsocket:junixsocket-common:2.9.1'
    implementation 'com.kohlschutter.junixsocket:junixsocket-native-common:2.9.1'
    implementation 'org.apache.httpcomponents:httpclient:4.5.14'

    testImplementation 'org.springframework.boot:spring-boot-starter-test'
    testImplementation 'org.mockito:mockito-core:4.0.0'
    testImplementation 'org.mockito:mockito-junit-jupiter:4.0.0'
}

tasks.named('test') {
    jvmArgs '-XX:+EnableDynamicAgentLoading'
    useJUnitPlatform()
}
